Fixed alignment issues where all the grid was one row

--- a/public/stylesheets/user-page.scss
+++ b/public/stylesheets/user-page.scss
@@ -81,7 +81,7 @@ nav {
   margin: 20px; 
 
   .goal {
-    width: 310px;
+    width: 340px;
     margin: 20px auto;
     min-height: 347px;
 
@@ -206,6 +206,7 @@ $GOALS_BOX_HEIGHT: 30px;
   .goal {
     margin: 0 auto;
     min-height: 300px;
+    width: 310px;
   }
 
   #add-goal-heading {
